--- a/aws/playbook.yml
+++ b/aws/playbook.yml
@@ -1,8 +1,9 @@
 - hosts: terraform-ansible
   tasks:
-  - name: criando arquivo
-    copy:
-      dest: /home/ubuntu/index.html
-      content: <h1>Feito com terraform e ansible</h1>
-  - name: criando servidor
-    shell: nohup busybox httpd -f -p 8080 &
+  - name: Instalando pacotes python3 e virtualenv
+    apt:
+      pkg:
+      - python3
+      - virtualenv
+      update_cache: true
+    become: true
