ansible-playbook -i hosts -u ubuntu --private-key /mnt/c/Users/giovannybrandalise/.ssh/iac-alura.pem playbook.yml

--- a/aws/playbook.yml
+++ b/aws/playbook.yml
@@ -7,3 +7,11 @@
       - virtualenv
       update_cache: true
     become: true
+  - name: Instalando dependencias com pip (Django e Django Rest)
+    pip:
+      virtualenv: /home/ubuntu/tcc/venv
+      name:
+      - django
+      - djangorestframework
+  - name: Iniciando o projeto
+    shell: '. /home/ubuntu/tcc/venv/bin/activate; django-admin startproject setup /home/ubuntu/tcc/'
